# dukto-qt6

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  qml.qrc
data/: CMakeLists.txt  dukto.desktop.in
i18n/: dukto-qt6_zh_CN.ts
qml/: AboutPage.qml  BuddiesPage.qml  BuddyListElement.qml  ButtonDark.qml  ColorBox.qml  ColorPicker.qml  ColorSlider.qml  ColorUtils.js  DuktoFragment.qml  DuktoOverlay.qml  IPPage.qml  PanelGradient.qml  RecentPage.qml  SBPicker.qml  SettingsPage.qml  SmoothText.qml  TabBar.qml  TermsPage.qml  TileGradient.qml  ToolBar.qml  main.qml
src/: enginerunner.cpp  enginerunner.h  main.cpp  os.h  utilities.h
src/data/: appsettings.cpp  appsettings.h  colorsingleton.cpp  colorsingleton.h  thememanager.cpp  thememanager.h
src/model/: buddylistitemmodel.cpp  buddylistitemmodel.h  ipaddressitemmodel.cpp  ipaddressitemmodel.h  recentlistitemmodel.cpp  recentlistitemmodel.h
src/utils/: peer.h
